Update profile links for Praveen J

--- a/profile/2023-2027.md
+++ b/profile/2023-2027.md
@@ -41,7 +41,7 @@ Roll No | Name | Repo URL | Leetcode URL | Current Status
 37 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 38 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 39 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
-40 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
+40 |Praveen J  | [Github](https://github.com/JP2747/leetcode-tracker) | [Leetcode](https://leetcode.com/u/YGngNAw3LZ/) | ![](https://leetcard.jacoblin.cool/YGngNAw3LZ)
 41 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 42 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 43 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
