--- a/profile/2023-2027.md
+++ b/profile/2023-2027.md
@@ -2,12 +2,12 @@
 ### Batch 2024 - 2028
 Roll No | Name | Repo URL | Leetcode URL | Current Status
 --- | --- | --- | --- | ---
-1 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
+1 | BALA ABIRAMI K | [Github](https://github.com/abiramibala255/BALA-ABIRAMI) | [Leetcode](https://leetcode.com/u/NpBLP7jKkU/) | ![](https://leetcard.jacoblin.cool/NpBLP7jKkU)
 2 | BALAJI R | [Github](https://github.com/BALAJI-R02/leetcode) | [Leetcode](https://leetcode.com/u/BALAJI_R02/) | ![](https://leetcard.jacoblin.cool/BALAJI_R02)
 3 |BALAJI V  | [Github](https://github.com/Balaji231227/lee) | [Leetcode](https://leetcode.com/u/pfNWS6ZGgB/) | ![](https://leetcard.jacoblin.cool/pfNWS6ZGgB)
 4 |BALAKUMARAN S  | [Github](https://github.com/Balakumaran-17/leetcode) | [Leetcode](https://leetcode.com/u/KIjMZZxsM9/) | ![](https://leetcard.jacoblin.cool/KIjMZZxsM9)
 5 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
-6 |Boomika A  | [Github](https://github.com/07Boomika/LEETCODE) | [Leetcode](https://leetcode.com/u/Boomika27_/) | ![](https://leetcard.jacoblin.cool/Boomika27_)
+6 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 7 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 8 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 9 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
@@ -23,32 +23,32 @@ Roll No | Name | Repo URL | Leetcode URL | Current Status
 19 | GURU KARTHICK N S | [Github](https://github.com/GURUKARTHICK-NS14/LEETCODE-TRAC) | [Leetcode](https://leetcode.com/u/guru_sparker_15/) | ![](https://leetcard.jacoblin.cool/guru_sparker_15)
 20 | HAREESH N | [Github](https://github.com/hareeshn246-cyber/leet) | [Leetcode](https://leetcode.com/u/HareeshN440/) | ![](https://leetcard.jacoblin.cool/HareeshN440)
 21 | HARIHARA SUDHAN K K | [Github](https://github.com/HARIHARASUDHAN-9182/LEETCODE-PROGRESS) | [Leetcode](https://leetcode.com/u/KKHari26/) | ![](https://leetcard.jacoblin.cool/KKHari26)
-22 |INDHU V| [Github](https://github.com/Indhu-V0602/Leetcode) | [Leetcode](https://leetcode.com/u/Indhu-V/) | ![](https://leetcard.jacoblin.cool/Indhu-V)
+22 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 23 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 24 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 25 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 26 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
-27 | KRISHNAKUMAR M  | [Github](https://github.com/krishnakumar-5/leetcode) | [Leetcode](https://leetcode.com/u/Krish_____5/) | ![](https://leetcard.jacoblin.cool/Krish_____5)
+27 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 28 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 29 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 30 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
-31 |MANJU SREE R| [Github](https://github.com/Manjusreer/Leetcode) | [Leetcode](https://leetcode.com/u/ManjuSreey/) | ![](https://leetcard.jacoblin.cool/ManjuSreey)
-32 | MANOJ S | [Github](https://github.com/MANOJ-0003/leetode) | [Leetcode](https://leetcode.com/Manoj_S_03/) | ![](https://leetcard.jacoblin.cool/Manoj_S_03)
+31 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
+32 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 33 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 34 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 35 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 36 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 37 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
-38 |PAVITHRAA R J  | [Github](https://github.com/PAVITHRAA297/LEETCODE) | [Leetcode](https://leetcode.com/u/R_J_PAVITHRAA/) | ![](https://leetcard.jacoblin.cool/R_J_PAVITHRAA)
+38 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 39 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 40 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 41 |PRIYADHARSHINI M| [Github](https://github.com/PriyadharshiniM2005/Leetcode) | [Leetcode](https://leetcode.com/u/Priyadharshini_M2005/) | ![](https://leetcard.jacoblin.cool/Priyadharshini_M2005)
-42 |RITHIKA K  | [Github](https://github.com/rithika-k767/leetcode) | [Leetcode](https://leetcode.com/u/XhTSsGlCwp/) | ![](https://leetcard.jacoblin.cool/XhTSsGlCwp)
+42 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 43 |SABARNA V| [Github](https://github.com/SABARNA-V/leetcode) | [Leetcode](https://leetcode.com/u/710723149043/) | ![](https://leetcard.jacoblin.cool/710723149043)
 44 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 45 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 46 | SARAN D | [Github](https://github.com/saran702/Leetcode-track) | [Leetcode](https://leetcode.com/u/SarAN2785/) | ![](https://leetcard.jacoblin.cool/SarAN2785)
-47 | SHALINI N | [Github](https://github.com/ShaliniNataraj-hub) | [Leetcode](https://leetcode.com/u/SHALINI-NATARAJ/) | ![](https://leetcard.jacoblin.cool/SHALINI-NATARAJ)
+47 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 48 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 49 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 50 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
@@ -56,13 +56,9 @@ Roll No | Name | Repo URL | Leetcode URL | Current Status
 52 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 53 |SURENDAR C  | [Github](https://github.com/surendarchellamuthu/leet) | [Leetcode](https://leetcode.com/u/Surendar-Chellamuthu1212/) | ![](https://leetcard.jacoblin.cool/Surendar-Chellamuthu1212)
 54 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
-55 | SURYA E | [Github](https://github.com/suryasuryaelango122-lab) | [Leetcode](https://leetcode.com/u/surya_7845/) | ![](https://leetcard.jacoblin.cool/surya_7845)
+55 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 56 |SWETHA M  | [Github](https://github.com/swetha-manokaran/LEETCODE-TRACK) | [Leetcode](https://leetcode.com/u/WhqJ1Dmp8Z/) | ![](https://leetcard.jacoblin.cool/WhqJ1Dmp8Z)
 57 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 58 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 59 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
 60 |THARANI V  | [Github](https://github.com/Tharani058/LEETCODE) | [Leetcode](https://leetcode.com/u/Tharani_vijay/) | ![](https://leetcard.jacoblin.cool/Tharani_vijay)
-61 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
-62 |  | [Github]() | [Leetcode]() | ![](https://leetcard.jacoblin.cool/)
-63 | VISHNU RAJ M | [Github](https://github.com/Vishnu-21-09/leetcode)| [Leetcode](https://leetcode.com/u/v9zUdd0mx7/) | ![](https://leetcard.jacoblin.cool/v9zUdd0mx7)
-301 | A.S.THARUN PRANAV | [Github](https://github.com/ASTHARUNPRANAV/leetcode) | [Leetcode](https://leetcode.com/u/Y4FLmo90hT/) | ![](https://leetcard.jacoblin.cool/Y4FLmo90hT)
